hard-gists/8838751/run.log
=== Docker Run Log for 8838751 ===
Started at: Mi 29. Okt 18:03:01 CET 2025

[2025-10-29 18:03:02] START: Running container for 8838751
[2025-10-29 18:03:02] SUCCESS: Container 24285e2950ac891a08f0cc2051c99e454ced847f86b565c4fa13dcc4ab39e3fb started for 8838751
=== Container logs for 8838751 ===
  File "/snippet.py", line 15
    print 'Last photo has no location metadata.'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8838751 ===
[2025-10-29 18:03:04] INFO: Container 24285e2950ac891a08f0cc2051c99e454ced847f86b565c4fa13dcc4ab39e3fb has stopped
